test/src/e2e_vm_tests/test_programs/should_fail/abi_associated_const_missing_impl/src/main.sw
script;

abi ConstantId {
    const ID: u32;
}

struct Struct {}

impl ConstantId for Struct {
}

fn main() -> u32 {
  0
}
